--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,5 @@
  * for use is subject to civil and criminal prosecution.
  */
 
-rootProject.name = 'platform-kafka-topic-service'
+rootProject.name = 'platform-controller'
 gradle.ext.civitasMavenRepo = 'https://nexus.private.civitaslearning.com/repository/maven-all'
